introductiion and top level block diagram

--- a/radio_ae/radae_refs.bib
+++ b/radio_ae/radae_refs.bib
@@ -6,3 +6,11 @@
   title={{FreeDV-032 Radio Autoencoder Waveform Design (spreadsheet)}},
   author={Rowe, David},
 }
+@misc{valin2023lowbitrate,
+      title={Low-Bitrate Redundancy Coding of Speech Using a Rate-Distortion-Optimized Variational Autoencoder}, 
+      author={Jean-Marc Valin and Jan Büthe and Ahmed Mustafa},
+      year={2023},
+      eprint={2212.04453},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS}
+}
